2013-08-07  6.8.6-9 Cristy  <quetzlzacatenango@image...>
  * Free disk resource if case resources are exhausted (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23877).

2013-08-06  6.8.6-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-8, SVN revision 12918.

2013-08-04  6.8.6-8 Dirk Lemstra <dirk@snakeware...>
  * Added support for WebP to the Windows distribution (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23856).

2013-07-31  6.8.6-8 Cristy  <quetzlzacatenango@image...>
  * Properly handle interlaced GIF images with less than 8 rows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23812).
  * Ensure image colorspace is sRGB when writing WebP format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23841).
  * Avoid deadlock with logging subsystem (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=23849).

2013-07-25  6.8.6-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-7, SVN revision 12752.

2013-07-24  6.8.6-7 Cristy  <quetzlzacatenango@image...>
  * Missing case for HCLpColorspace (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23811).

2013-07-21  6.8.6.7 Glenn Randers-Pehrson <glennrp@image...>
  * Do not write "jpeg:" properties in a PNG output file (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23794).

2013-07-17  6.8.6-7 Dirk Lemstra <dirk@snakeware...>
  * Fix memory leak in CloneImageArtifacts and CloneImageProfiles.
  * Minor fix for the clipMask property in Magick++.

2013-07-16  6.8.6-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-6, SVN revision 12718.

2013-07-16  6.8.6-6 Cristy  <quetzlzacatenango@image...>
  * JPEG ICC color profile requires null after ICC tag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23756).