@@ -1,3 +1,7 @@
+2013-08-10  6.8.6.9 Glenn Randers-Pehrson <glennrp@image...>
+  * Added "-define bmp:format=bmp2|bmp3|bmp4" option (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23875).
+
 2013-08-07  6.8.6-9 Cristy  <quetzlzacatenango@image...>
   * Free disk resource if case resources are exhausted (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23877).
